# -*- python -*-
# This file contains rules for Bazel; see drake/doc/bazel.rst.

package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "ft_300s_driver",
    srcs =  [
      "main.cc",
      "rq_int.h",
      "rq_sensor_com.cc",
      "rq_sensor_com.h",
      "rq_sensor_socket.cc",
      "rq_sensor_socket.h",
      "rq_sensor_state.cc",
      "rq_sensor_state.h",
      "Thread/mutex.cc",
      "Thread/mutex.h",
      "Thread/rq_thread.cc",
      "Thread/rq_thread.h",
    ],
    linkstatic = 1,
    deps = [
        "@gflags//:gflags",
        "@lcm//:lcm",
    ]
)
